# chat-app-implementation

./: README.md
app/: package.json  pnpm-lock.yaml
app/src/: env.d.ts  error.html  hooks.server.ts
app/src/lib/: index.ts
app/src/lib/components/: chat_window.svelte  sidebar.svelte
app/src/lib/database/: db.ts
app/src/lib/store/: globalState.ts
app/src/lib/utils/: crud.ts  db.ts  password_security.ts  security.ts
app/src/routes/: +page.svelte
app/src/routes/home/: +page.server.ts  +page.svelte
backend/: .gitignore  pyproject.toml
backend/app/: .env  alembic.ini  config.py  db.py  main.py
backend/app/api/: dependencies.py
backend/app/api/auth/: routes.py
backend/app/api/crud/: group.py  messages.py  user.py
backend/app/api/messages/: routes.py
backend/app/core/: config.py  db.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 04541b72c69e_feat_reduced_redundancy_by_seperating_.py  3f70e0d0d582_fixed_imports.py  4de26ebbbc18_feat_fixed_sqlalchemy_models.py  be52fb25557a_feat_added_chat_id_s_to_group_and_.py  f20562ce65bb_fix_fixed_primary_indices_for_group_and_.py
backend/app/models/: Groups.py  Messages.py  User.py  __init__.py
backend/app/schemas/: db.sql  userdetails.py
backend/app/utils/: security.py
frontend/: .prettierrc  package.json  pnpm-lock.yaml
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/: index.ts
frontend/src/lib/components/: chat_list.svelte  chat_window.svelte  sidebar.svelte
frontend/src/lib/store/: globalState.ts
frontend/src/routes/: +layout.svelte  +page.svelte
(+13 files in other folders)
